--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -6,17 +6,18 @@ on:
     branches: ["main"]
 
 jobs:
-  fourmolu:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
+  # fourmolu:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - uses: actions/checkout@v4
 
-    - uses: haskell-actions/run-fourmolu@v10
-      with:
-        pattern: |
-          src
-          app
-          test
+  #   - uses: haskell-actions/run-fourmolu@v10
+  #     with:
+  #       version: "0.15.0.0" # per hls 2.9.0.0
+  #       pattern: |
+  #         src
+  #         app
+  #         test
 
   hlint:
     runs-on: ubuntu-latest
